# vinzy-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSING.md  PROJECT_STATE.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  37acb56fb5a0_initial_schema_with_zuultimate_tenant_id.py
config/: default.yaml
docs/pricing/: index.html
scripts/: seed_products.py
src/vinzy_engine/: __init__.py  app.py  cli.py  client.py  deps.py
src/vinzy_engine/activation/: models.py  router.py  schemas.py  service.py
src/vinzy_engine/anomaly/: __init__.py  detector.py  models.py  router.py  schemas.py  service.py
src/vinzy_engine/audit/: __init__.py  models.py  router.py  schemas.py  service.py
src/vinzy_engine/common/: config.py  database.py  exceptions.py  ip_filter.py  logging.py  models.py  rate_limiting.py  schemas.py  security.py
src/vinzy_engine/dashboard/: __init__.py  auth.py  context.py  router.py
src/vinzy_engine/keygen/: generator.py  lease.py  validator.py
src/vinzy_engine/licensing/: agent_entitlements.py  composition.py  entitlements.py  models.py  router.py  schemas.py  service.py  (+1 more)
tests/: conftest.py  test_benchmarks.py  test_dashboard.py  test_dashboard_auth.py
tests/integration/: test_activation_router.py  test_anomaly_router.py  test_audit_router.py  test_license_router.py  test_provisioning_pipeline.py  test_tenant_router.py  test_usage_router.py  test_webhook_router.py
tests/unit/: test_activation.py  test_adversarial.py  test_agent_entitlements.py  test_agent_usage.py  test_anomaly.py  test_audit.py  test_auth_wiring.py  test_client.py  test_composition.py  test_ip_filter.py  test_keygen.py  test_lease.py  test_licensing.py  test_provisioning.py  test_rate_limiting.py  test_tenants.py  test_tier_templates.py  test_usage.py  test_validator.py  test_webhooks.py
(+49 files in other folders)
