[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vinzy-engine"
version = "0.1.0"
description = "Cryptographic license key generator, entitlement manager, and usage metering platform"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [{ name = "Chris Arsenault" }]
keywords = ["licensing", "keygen", "cryptography", "zero-trust", "entitlements", "usage-metering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/chrisarseno/vinzy-engine"
Repository = "https://github.com/chrisarseno/vinzy-engine"
Issues = "https://github.com/chrisarseno/vinzy-engine/issues"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.0",
]

[project.scripts]
vinzy = "vinzy_engine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
